Added album cover art

--- a/M2-D2.html
+++ b/M2-D2.html
@@ -99,17 +99,19 @@ HINT: Manage your time in order to finish the structure and responsiveness befor
             <div class="row">
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                   <div>
-                    <img src="..." alt="..." class="img-thumbnail">
+                    <img src="pantera pic.jpg" alt="panterapic" class="img-thumbnail">
                   </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-                  Album 2ess
+                  <div>
+                    <img src="wutangpic.jpeg" alt="wutangpicture" class="img-thumbnail">
+                  </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-                  Album 3
+                  <img src="prodigypic.jpg" alt="wutangpicture" class="img-thumbnail">
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-                  Album 4
+                  <img src="theclashalbum_adobespark.jfif" alt="wutangpicture" class="img-thumbnail">
                 </div>
               </div>
           </div>
