--- a/M2-D2.html
+++ b/M2-D2.html
@@ -100,18 +100,229 @@ HINT: Manage your time in order to finish the structure and responsiveness befor
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                   <div>
                     <img src="pantera pic.jpg" alt="panterapic" class="img-thumbnail">
+                    <div class="container">
+                      <div class="row">
+                        Cowboys From Hell
+                      </div>
+                      <div class="row">
+                        Pantera
+                      </div>
+                      <div class="row">
+                        Album Duration: 57:44
+                      </div>
+                      <div class="row">
+                        Metal
+                      </div>
+                      <div class="container">
+                        <div class="row">
+                          <h3>Tracklist</h3>
+                        </div>
+                        <div class="row">
+                          "Cowboys from Hell"
+                        </div>
+                        <div class="row">
+                          "Primal Concrete Sledge"
+                        </div>
+                        <div class="row">
+                          "Psycho Holiday"
+                        </div>
+                        <div class="row">
+                          "Heresy"
+                        </div>
+                        <div class="row">
+                          "Cemetery Gates"
+                        </div>
+                        <div class="row">
+                          "Domination"
+                        </div>
+                        <div class="row">
+                          "Shattered"
+                        </div>
+                        <div class="row">
+                          "Clash with Reality"
+                        </div>
+                        <div class="row">
+                          "Medicine Man"
+                        </div>
+                        <div class="row">
+                          "Message in Blood"
+                        </div>
+                        <div class="row">
+                          "The Sleep"
+                        </div>
+                        <div class="row">
+                          "The Art of Shredding"
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                   <div>
                     <img src="wutangpic.jpeg" alt="wutangpicture" class="img-thumbnail">
+                    <div class="row">
+                      Enter The Wu-Tang
+                    </div>
+                    <div class="row">
+                      Wu-Tang Clan
+                    </div>
+                    <div class="row">
+                      Album Duration: 58:26
+                    </div>
+                    <div class="row">
+                      Rap
+                    </div>
+                    <div class="container">
+                      <div class="row">
+                        <h3>Tracklist</h3>
+                      </div>
+                      <div class="row">
+                        "Bring da Ruckus"
+                      </div>
+                      <div class="row">
+                        "Shame on a ******"
+                      </div>
+                      <div class="row">
+                        "Clan in da Front"
+                      </div>
+                      <div class="row">
+                        "Wu-Tang: 7th Chamber"
+                      </div>
+                      <div class="row">
+                        "Can It Be All So Simple"
+                      </div>
+                      <div class="row">
+                        "Da Mystery of Chessboxin'"
+                      </div>
+                      <div class="row">
+                        "Wu-Tang Clan Ain't Nuthing ta F' Wit"
+                      </div>
+                      <div class="row">
+                        "C.R.E.A.M."
+                      </div>
+                      <div class="row">
+                        "Method Man"
+                      </div>
+                      <div class="row">
+                        "Protect Ya Neck"
+                      </div>
+                      <div class="row">
+                        "Tearz"
+                      </div>
+                      <div class="row">
+                        "Wu-Tang: 7th Chamber—Part II"
+                      </div>
+                      <div class="row">
+                        "Conclusion"
+                      </div>
+                    </div>
                   </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                   <img src="prodigypic.jpg" alt="wutangpicture" class="img-thumbnail">
+                  <div class="row">
+                    The Fat Of The Land
+                  </div>
+                  <div class="row">
+                    The Prodigy
+                  </div>
+                  <div class="row">
+                    Album Duration: 56:21
+                  </div>
+                  <div class="row">
+                    Dance
+                  </div>
+                  <div class="container">
+                    <div class="row">
+                      <h3>Tracklist</h3>
+                    </div>
+                    <div class="row">
+                      "Smack My ***** Up"
+                    </div>
+                    <div class="row">
+                      "Breathe"
+                    </div>
+                    <div class="row">
+                    	"Diesel Power" 
+                    </div>
+                    <div class="row">
+                      "Funky Shit"
+                    </div>
+                    <div class="row">
+                      "Serial Thrilla"
+                    </div>
+                    <div class="row">
+                      "Mindfields"
+                    </div>
+                    <div class="row">
+                      "Narayan" 
+                    </div>
+                    <div class="row">
+                      "Firestarter"
+                    </div>
+                    <div class="row">
+                      "Climbatize"
+                    </div>
+                    <div class="row">
+                      "Fuel My Fire"
+                    </div>
+                  </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                   <img src="theclashalbum_adobespark.jfif" alt="wutangpicture" class="img-thumbnail">
+                  <div class="row">
+                    London Calling
+                  </div>
+                  <div class="row">
+                    The Clash
+                  </div>
+                  <div class="row">
+                    Album Duration: 80:46
+                  </div>
+                  <div class="row">
+                    Punk Rock
+                  </div>
+                  <div class="container">
+                    <div class="row">
+                      <h3>Tracklist</h3>
+                    </div>
+                    <div class="row">
+                      "London Calling"
+                    </div>
+                    <div class="row">
+                      "Brand New Cadillac"
+                    </div>
+                    <div class="row">
+                      "Jimmy Jazz"
+                    </div>
+                    <div class="row">
+                      "Hateful"
+                    </div>
+                    <div class="row">
+                      "Rudie Can't Fail"
+                    </div>
+                    <div class="row">
+                      "Spanish Bombs"
+                    </div>
+                    <div class="row">
+                      "The Right Profile"
+                    </div>
+                    <div class="row">
+                      "Lost in the Supermarket"
+                    </div>
+                    <div class="row">
+                      "Clampdown"
+                    </div>
+                    <div class="row">
+                      "The Guns of Brixton"
+                    </div>
+                    <div class="row">
+                      "Wrong 'Em Boyo"
+                    </div>
+                    <div class="row">
+                      "Death or Glory"
+                    </div>
+                  </div>
                 </div>
               </div>
           </div>
