--- a/M2-D2.html
+++ b/M2-D2.html
@@ -97,7 +97,7 @@ HINT: Manage your time in order to finish the structure and responsiveness befor
 
         <div class="container-fluid"> 
             <div class="row">
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3 img-thumbnail">
                   <div>
                     <img src="pantera pic.jpg" alt="panterapic" class="img-thumbnail">
                     <div class="container">
@@ -157,7 +157,7 @@ HINT: Manage your time in order to finish the structure and responsiveness befor
                     </div>
                   </div>
                 </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3 img-thumbnail">
                   <div>
                     <img src="wutangpic.jpeg" alt="wutangpicture" class="img-thumbnail">
                     <div class="row">
@@ -218,7 +218,7 @@ HINT: Manage your time in order to finish the structure and responsiveness befor
                     </div>
                   </div>
                 </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3 img-thumbnail">
                   <img src="prodigypic.jpg" alt="wutangpicture" class="img-thumbnail">
                   <div class="row">
                     The Fat Of The Land
@@ -268,7 +268,7 @@ HINT: Manage your time in order to finish the structure and responsiveness befor
                     </div>
                   </div>
                 </div>
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3 img-thumbnail">
                   <img src="theclashalbum_adobespark.jfif" alt="wutangpicture" class="img-thumbnail">
                   <div class="row">
                     London Calling
@@ -326,7 +326,18 @@ HINT: Manage your time in order to finish the structure and responsiveness befor
                 </div>
               </div>
           </div>
-
+          <div class="container">
+            <div class="row">
+              <div class="col"><img src="bad album 1300.jfif" alt="wutangpicture" class="img-thumbnail"></div>
+              <div class="col">"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"</div>
+            </div>
+            <div class="row">
+              <div class="col"><img src="souljaboybad_adobespark.jfif" alt="souljah boy pic" class="img-thumbnail"></div>
+              <div class="col">"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"</div>
+            </div>
+            </div>
+              
+          </div>
     <!-- EXERCISE 4
             Create a section for the album reviews.
             Pick one of your fav albums, and create a section with:
@@ -349,6 +360,12 @@ HINT: Manage your time in order to finish the structure and responsiveness befor
             This section is dedicated to him / her / them!
             Feel free to experiment in this part of the page.
         -->
+
+        <div class="container-fluid">
+          <div class="col-12">
+            <img src="dime_adobespark.jfif" alt="dime" class="text-center">
+          </div>
+        </div>
 
     <!-- EXERCISE 7
             Just covers!
