--- a/M2-D2.html
+++ b/M2-D2.html
@@ -357,43 +357,9 @@ HINT: Manage your time in order to finish the structure and responsiveness befor
         -->
 
         <div class="container-fluid"> 
-          <div class="row">
-              <div class="col-12 col-sm-6 col-md-4 col-lg-1 d-flex justify-content-center ">
-                <div>
-                  <img class="pantera" src="pantera pic.jpg" alt="panterapic" >
-                </div>
-                <div>
-                  <img class="pantera" src="pantera pic.jpg" alt="panterapic" >
-                </div>
-                <div>
-                  <img class="pantera" src="pantera pic.jpg" alt="panterapic" >
-                </div>
-                <div>
-                  <img class="pantera" src="pantera pic.jpg" alt="panterapic" >
-                </div>
-                <div>
-                  <img class="pantera" src="pantera pic.jpg" alt="panterapic" >
-                </div>
-                <div>
-                  <img class="pantera" src="pantera pic.jpg" alt="panterapic" >
-                </div>
-                <div>
-                  <img class="pantera" src="pantera pic.jpg" alt="panterapic" >
-                </div>
-                <div>
-                  <img class="pantera" src="pantera pic.jpg" alt="panterapic" >
-                </div>
-                <div>
-                  <img class="pantera" src="pantera pic.jpg" alt="panterapic" >
-                </div>
-                <div>
-                  <img class="pantera" src="pantera pic.jpg" alt="panterapic" >
-                </div>
-                <div>
-                  <img class="pantera" src="pantera pic.jpg" alt="panterapic" >
-                </div>
-               
-              </div>
+          <marquee behavior="scroll" direction="left">
+            <img src="" width="120" height="80" alt="Natural" />
+          </marquee>
         </div>
     <!-- EXERCISE 8
             Implement a footer with some information / social links
