--- a/M2-D2.html
+++ b/M2-D2.html
@@ -98,7 +98,7 @@ HINT: Manage your time in order to finish the structure and responsiveness befor
         <div class="container-fluid mt-4 "> 
             <div class="row ">
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3 img-thumbnail ">
-                  <div class="">
+                  <div>
                     <img src="pantera pic.jpg" alt="panterapic" class="img-thumbnail">
                     <div class="container text-center">
                       <div class="row">
